@@ -5776,6 +5776,8 @@ prog.cob:8: error: syntax error, unexpected Literal
 ])
 AT_CLEANUP
 
+# Let's add a double quote here " to match the one in the error and
+# please emacs coloring...
 
 # normal register extension,
 # active for lax and standard configurations
@@ -8345,6 +8347,41 @@ AT_DATA([prog.cob], [
 
 AT_CHECK([$COMPILE -freserved="XX*=BYTE-LENGTH" prog.cob], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [1])
+
+AT_CLEANUP
+
+
+AT_SETUP([PROTOTYPE parameter validation])
+AT_KEYWORDS([prototypes VALUE])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. f PROTOTYPE.
+       DATA DIVISION.
+       LINKAGE SECTION.
+       01 a PIC X(20).
+       01 b ANY LENGTH.
+      *> BINARY-C-INT usage does not exist: error on purpose to
+      *> trigger an error below
+       01 c USAGE BINARY-C-INT.
+      *> level 78 triggers an error, but not the expected one: the
+      *> string replaces the identifier in the scanner, so it becomes
+      *> a syntax error instead of a complain about level 78
+       78 d-const VALUE "abc".
+       PROCEDURE DIVISION
+          USING a
+                BY REFERENCE b
+                BY VALUE b
+                         c
+      *>                 d-const
+                RETURNING OMITTED.
+       END PROGRAM f.
+])
+
+AT_CHECK([$COMPILE_ONLY -Wno-unfinished prog.cob], [1], [],
+[prog.cob:10: error: unknown USAGE: BINARY-C-INT
+prog.cob:18: error: ANY LENGTH items may only be BY REFERENCE formal parameters
+])
 
 AT_CLEANUP
 
